# modus_ponens

./: .gitignore  Cargo.toml  README.md
examples/count-people/: Cargo.toml
examples/count-people/src/: fact.pest  main.rs
examples/fib-linear/: Cargo.toml
examples/fib-linear/src/: fact.pest  main.rs
examples/isa-bench/: Cargo.toml
examples/isa-bench/src/: fact.pest  grammar.pest  kb.rs  main.rs
examples/math-test/: Cargo.toml
examples/math-test/src/: fact.pest  kb.rs  main.rs
examples/prepolea/: Cargo.toml
examples/prepolea/src/: fact.pest  main.rs
examples/readme-example/: Cargo.toml
examples/readme-example/src/: fact.pest  grammar.pest  kb.rs  main.rs
examples/sets-example/: Cargo.toml
examples/sets-example/src/: kb.rs  main.rs
examples/socrate-bench/: Cargo.toml
examples/socrate-bench/src/: fact.pest  main.rs
examples/socrate2-bench/: Cargo.toml
examples/socrate2-bench/src/: fact.pest  main.rs
modus_ponens_derive/: Cargo.toml
modus_ponens_derive/src/: lib.rs
python/: benchmark2_clips.py  benchmark2_prolog.py  benchmark2_prolog_dummy.py  benchmark_clips.py  benchmark_prolog.py
src/: activation.rs  condition.pest  condition.rs  constants.rs  fact.rs  factset.rs  facttree.rs  grammar.pest  kbase.rs  knowledge.pest  knowledge.rs  lexicon.rs  lib.rs  main.rs  matching.rs  parser.rs  path.rs  ruletree.rs  segment.rs  transform.pest  transform.rs  transform_num.pest  transform_num.rs  transform_str.pest  transform_str.rs
