[package]
name = "modus_ponens"
version = "0.11.3"
authors = ["Enrique Pérez Arnaud <enrique@cazalla.net>"]
edition = "2018"
license = "GPL-3.0+"
description = "Library to develop forward chaining inference engines"
homepage = "http://www.modus_ponens.net"
documentation = "http://doc.modus_ponens.net"
repository = "https://gitlab.com/enriquepablo/modus_ponens"
readme = "README.md"

[dependencies]
log = "0.4"
env_logger = "0.7.1"
pest = "2.1.2"
pest_derive = "2.1.0"
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"
