[package]
name = "modus_ponens_derive"
version = "0.1.1"
authors = ["enriquepablo <enrique@cazalla.net>"]
edition = "2018"
license = "GPL-3.0+"
description = "Library to develop forward chaining inference engines"
homepage = "http://www.modus_ponens.net"
documentation = "http://doc.modus_ponens.net"
repository = "https://gitlab.com/enriquepablo/modus_ponens"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
modus_ponens = "0.11.3"
