[package]
name = "math-test"
version = "0.1.0"
authors = ["enriquepablo <enrique@cazalla.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
modus_ponens = { path = "../../" }
modus_ponens_derive = { path = "../../modus_ponens_derive" }
pest = "2.1.2"
pest_derive = "2.1.0"
log = "0.4"
env_logger = "0.7.1"
