[package]
name = "readme-example"
version = "0.1.0"
authors = ["enriquepablo <enrique@cazalla.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
modus_ponens = "0.11.2"
modus_ponens_derive = "0.1.0"
pest = "2.1.2"
pest_derive = "2.1.0"
log = "0.4"
env_logger = "0.7.1"
